Code Base/objects/SubAssemblyBOM__c.object
<CustomObject>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>Materials__c</referenceTo>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubAssemblyBOMPrice__c</fullName>
        <formula>Sub_Assembly__r.Price__c *  Sub_Assembly_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRICE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubAssemblyBOMUniqueName__c</fullName>
        <label>Sub Assembly BOM Unique Name</label>
        <length>155</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubAssemblyID__c</fullName>
        <formula>Sub_Assembly__r.SubAssemblyID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubAssembly ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubAssemblyName__c</fullName>
        <formula>Sub_Assembly__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Assembly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubAssemblyURL__c</fullName>
        <label>SubAssemblyURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sub_Assembly_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sub Assembly Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Assembly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Assembly</label>
        <referenceTo>SubAssembly__c</referenceTo>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <formula>Sub_Assembly__r.SupplierName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <label>SubAssembly BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubAssemblyBOMUniqueName__c</columns>
        <columns>Sub_Assembly__c</columns>
        <columns>Material__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SubAssembly BOM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubAssembly BOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>